syntax = "proto3";

package author_api;

option go_package = './pb';

service AuthorService {
    rpc GetAuthorsByIds (GetAuthorsByIdsRequest) returns (GetAuthorsByIdsResponse) {};
    rpc GetAuthorIdsByEmails (GetAuthorIdsByEmailsRequest) returns (GetAuthorIdsByEmailResponse) {};
}

message GetAuthorsByIdsRequest {
    repeated int32 authorIds = 1;
}
 
message GetAuthorsByIdsResponse {
    repeated Author authors = 1;
}

message Author {
    string userName = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    int32 authorId = 5;
}

message GetAuthorIdsByEmailsRequest {
    repeated string email = 1;
}

message GetAuthorIdsByEmailResponse {
    repeated int32 authorIds = 1;
}