syntax = "proto3";

package post_api;

import "google/protobuf/timestamp.proto";
import "author_api.proto";

option go_package = './pb';

service PostService {
    rpc GetPostsByIds(GetPostsByIdsRequest) returns (GetPostsByIdsResponse) {};
    rpc UpsertPost(UpsertPostRequest) returns (UpsertPostResponse) {};
}


message GetPostsByIdsRequest {
    repeated int32 postIds = 1;
    string search_term = 2;
}

message GetPostsByIdsResponse {
    repeated Post posts = 1;
}

message Post {
    repeated author_api.Author authors = 1;
    string body = 2;
    google.protobuf.Timestamp created = 3;
    int32 postId = 4;
    string title = 5;
    google.protobuf.Timestamp updated = 6;
    float tfidf = 7;
}

message UpsertPostRequest {
    int32 postId = 1;
    string title = 2;
    string body = 3;
    repeated int32 authorId = 4;
}

message UpsertPostResponse { }
